Fix a crash when painting with overlay-colorsmudge on tranparency masks

It happened because the color space of the mask's (and filter layer's)
paint device didn't match, therefore color picking algorithm couldn't
work. Now the color space matching is done via forcing the color space
of the layer overlay device.

BUG:441358
(cherry picked from commit c6af6b4e0846959169140d0bd4f143fcbba402aa)